<resources>
    <integer-array name="google_glyph_colors">
        <item>@color/test_1</item>
        <item>@color/test_1</item>
        <item>@color/test_2</item>
    </integer-array>

    <string name="app_name">政企通</string>
    <string name="result_network_error">网络不给力，请检查网络</string>
    <string name="result_server_error">服务器连接失败，请稍后再试</string>
    <string name="result_server_timeout">服务器连接超时，请稍后再试</string>
    <string name="result_empty_error">系统繁忙，请稍后再试</string>
    <string name="edit_digit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login_xieyi">注册即代表您同意用户服务协议、隐私协议</string>
    <string name="myCollect">我的收藏</string>
    <string name="logOut">退出登录</string>
    <string name="my">我的</string>
    <string name="hint_project_name">请填写申报项目名称</string>
    <string name="hint_project_type">请填写申报类别</string>
    <string name="hint_company_name">请填写公司名称</string>
    <string name="hint_project_info">请填写项目描述</string>
    <string name="hint_project_money">请填写申报补贴金额</string>
    <string name="hint_address">请填写地址</string>
    <string name="hint_contract_person">请填写联系人</string>
    <string name="hint_phone">请填写联系电话</string>
    <string name="personal_center">个人中心</string>

    <!--个人中心-->
    <string name="personal_data">个人资料</string>
    <string name="project_approval">项目审批</string>
    <string name="my_post">我的发文</string>
    <string name="my_collect">我的收藏</string>
    <string name="authentication_center">认证中心</string>
    <string name="promotion_download">推广下载</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="switch_account">切换账号</string>
    <string name="exit">退出</string>
    <string name="questionnaire">调查问卷</string>

    <!--主页fragment-->
    <string name="project_application">项目申报</string>
    <string name="enterprise_account_management">企业账户管理</string>
    <string name="system_announcement">系统公告</string>
    <string name="my_business">我的企业</string>
    <string name="message_notification">消息通知</string>
    <string name="message_alert">消息提醒</string>
    <string name="projects_to_be_approved">待审核</string>
    <string name="enprice_od">企业公告</string>
    <string name="my_enprice_od">我的企业公告</string>
    <string name="enprice_od_detail">企业公告详情</string>
    <!--企业项目 fragment-->
    <string name="approved_projects">已审核</string>
    <string name="enterprise_project">企业项目</string>
    <string name="my_declaration">我的申报</string>
    <string name="my_receive_msg">我的收文</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issued_documents">已发公文</string>
    <string name="completed">已填报</string>
    <string name="not_filled_in">未填报</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="google_glyph_strings">
        <item> M 146.41 0.00 L 146.60 0.00 C 150.04 4.76 154.80 8.90 158.18 13.84 C 158.34 43.12 158.07 72.40 158.31 101.67 C 158.06 114.11 158.41 126.55 158.12 138.98 C 157.70 156.57 150.68 173.87 138.84 186.87 C 126.37 200.76 108.52 209.70 89.90 211.18 C 74.39 212.54 58.47 208.94 45.13 200.89 C 30.76 192.31 19.40 178.78 13.54 163.09 C 6.98 145.82 7.16 126.12 14.02 108.98 C 20.68 92.12 33.71 77.89 49.93 69.81 C 60.32 64.51 71.98 61.86 83.62 61.84 C 83.77 72.95 83.73 84.06 83.53 95.16 C 72.18 96.09 60.66 100.29 52.90 108.92 C 44.12 118.48 40.31 132.30 43.01 145.00 C 45.11 155.40 51.42 164.88 60.22 170.82 C 69.64 177.33 81.86 179.57 92.99 176.88 C 105.59 173.94 116.77 164.71 121.40 152.54 C 124.51 145.13 124.80 136.92 124.71 129.00 C 124.73 107.71 124.72 86.42 124.74 65.13 C 124.81 47.82 124.56 30.50 124.86 13.20 C 132.08 9.09 139.17 4.77 146.34 0.58 C 146.36 0.44 146.39 0.15 146.41 0.00 z</item>
        <item>
            M 78.55 108.44 C
            80.44 106.23 84.05 107.81 86.64 107.33C
            87.27 108.02 87.90 108.71 88.54 109.39C
            88.78 116.64 88.66 123.89 88.82 131.14 C
            95.58 131.19 102.34 131.08 109.10 131.18 C
            111.28 130.98 113.10 132.90 113.18 135.02 C
            113.50 137.69 113.37 141.66 109.98 142.18 C
            103.06 142.46 96.11 142.32 89.18 142.23 C
            88.59 148.77 89.20 155.39 89.01 161.97 C
            89.69 168.62 76.77 168.69 77.58 161.94 C
            77.56 155.41 77.60 148.87 77.66 142.35 C
            70.79 142.23 63.92 142.44 57.05 142.26 C
            52.89 141.98 53.05 137.00 53.52 133.96 C
            54.60 130.25 59.02 131.27 61.93 131.14 C
            67.19 130.91 72.60 131.66 77.76 130.75 C
            77.31 123.28 78.30 115.87 78.55 108.44 z
                    </item>
        <item> M 70.05 55.04 C 88.71 51.98 108.44 55.51 124.74 65.13 C 124.72 86.42 124.73 107.71 124.71 129.00 C 124.80 136.92 124.51 145.13 121.40 152.54 C 116.77 164.71 105.59 173.94 92.99 176.88 C 81.86 179.57 69.64 177.33 60.22 170.82 C 51.42 164.88 45.11 155.40 43.01 145.00 C 40.31 132.30 44.12 118.48 52.90 108.92 C 60.66 100.29 72.18 96.09 83.53 95.16 C 83.73 84.06 83.77 72.95 83.62 61.84 C 71.98 61.86 60.32 64.51 49.93 69.81 C 33.71 77.89 20.68 92.12 14.02 108.98 C 7.16 126.12 6.98 145.82 13.54 163.09 C 19.40 178.78 30.76 192.31 45.13 200.89 C 58.47 208.94 74.39 212.54 89.90 211.18 C 108.52 209.70 126.37 200.76 138.84 186.87 C 150.68 173.87 157.70 156.57 158.12 138.98 C 158.41 126.55 158.06 114.11 158.31 101.67 C 166.20 118.82 168.17 138.65 163.46 156.96 C 158.39 177.54 144.91 195.85 126.87 206.96 C 112.42 216.03 95.07 220.33 78.05 219.21 C 56.98 218.02 36.57 208.23 22.38 192.63 C 9.40 178.64 1.56 159.99 0.69 140.93 C -0.39 121.77 5.53 102.30 17.14 87.02 C 29.76 70.07 49.14 58.27 70.05 55.04 M 78.55 108.44 C 78.30 115.87 77.31 123.28 77.76 130.75 C 72.60 131.66 67.19 130.91 61.93 131.14 C 59.02 131.27 54.60 130.25 53.52 133.96 C 53.05 137.00 52.89 141.98 57.05 142.26 C 63.92 142.44 70.79 142.23 77.66 142.35 C 77.60 148.87 77.56 155.41 77.58 161.94 C 76.77 168.69 89.69 168.62 89.01 161.97 C 89.20 155.39 88.59 148.77 89.18 142.23 C 96.11 142.32 103.06 142.46 109.98 142.18 C 113.37 141.66 113.50 137.69 113.18 135.02 C 113.10 132.90 111.28 130.98 109.10 131.18 C 102.34 131.08 95.58 131.19 88.82 131.14 C 88.66 123.89 88.78 116.64 88.54 109.39 C 87.90 108.71 87.27 108.02 86.64 107.33 C 84.05 107.81 80.44 106.23 78.55 108.44 z</item>
    </string-array>

    <!--申报详情-->
    <string name="declare_detail_title">申报详情</string>
    <string name="project_name">申报项目名称</string>
    <string name="project_type">申报类别</string>
    <string name="company_name">公司名称</string>
    <string name="project_detail">项目描述</string>
    <string name="project_money">申报补贴金额</string>
    <string name="address">地址</string>
    <string name="contract">联系人</string>
    <string name="phone">联系方式</string>
    <string name="attachment">附件</string>
    <string name="isDeclare">审批是否通过</string>
    <string name="declare_appointment">审批意见</string>
    <string name="adopt">通过</string>
    <string name="notadopt">不通过</string>
    <string name="submit_declare">提交审批</string>

    <!--通讯录-->
    <string name="goverment_user">政府用户</string>
    <string name="company_user">企业用户</string>
    <string name="manage">管理</string>
    <string name="all_user">全体人员</string>
    <string name="all_user_msg">全员消息</string>
    <string name="group_msg">分组消息</string>
    <string name="add_msg">新增消息</string>
    <string name="add_od">新增公告</string>
    <string name="edit_msg">编辑通知</string>
    <string name="title">标题</string>
    <string name="text">正文</string>
    <string name="hint_declare">请填写审批意见</string>
    <string name="hint_msg_title">请输入通知标题</string>
    <string name="hint_msg_text">请输入通知正文</string>
    <string name="add_attachment">添加附件</string>
    <string name="send">发送</string>
    <string name="send_msg">发送消息</string>
    <string name="select_file">请选择文件</string>
    <string name="msg">消息</string>
    <string name="login">登录</string>
    <string name="login_hint">还没有账号？立即</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="username_hint">请输入用户名或手机号</string>
    <string name="pwd">密码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="verifycode">验证码</string>
    <string name="verifycode_hint">请输入验证码</string>
    <string name="step1">（1/2）</string>
    <string name="step2">（2/2）</string>
    <string name="register_hint">已经有账号？立即</string>
    <string name="comany_name">企业名称*</string>
    <string name="company_code">统一社会信用代码*</string>
    <string name="businessType">类型*</string>
    <string name="businessScope">经营范围*</string>
    <string name="businessTerm">营业期限*</string>
    <string name="legalRepresentative">法定代表人*</string>
    <string name="registeredCapital">注册资本*</string>
    <string name="setUpDate">成立日期*</string>
    <string name="com_address">住所*</string>
    <string name="company_verify">营业执照上传*</string>
    <string name="next_step">下一步</string>
    <string name="complete">完成</string>
    <string name="preview_step">上一步</string>
    <string name="username_must">用户名*</string>
    <string name="phone_must">手机号码*</string>
    <string name="mail_must">邮箱*</string>
    <string name="id_must">身份证*</string>
    <string name="pwd_must">密码*</string>
    <string name="verify_pwd_must">确认密码*</string>
    <string name="message_must">请输入必填信息</string>
    <string name="cs_contract">客服联系方式</string>
    <string name="pwd_not_equal">两次输入的密码不一致</string>
    <string name="phoneNumber">电话</string>
    <string name="email">邮箱</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="move">移动</string>
    <string name="select_user">请至少选择一个用户</string>
    <string name="hint_group_name">  *分组名</string>
    <string name="group_name_remark">  备注</string>
    <string name="have_selected">已选择 %1$s 人</string>
    <string name="have_selected_member">已选择 %1$s 人</string>
    <string name="have_selected_group">已选择 %1$s 组</string>
    <string name="ensure">确定</string>
    <string name="msgdetail">消息详情</string>
    <string name="createTime">创建时间：</string>
    <string name="officialdocdetail">公告详情</string>
    <string name="submit">提交</string>
    <string name="declare_name">申报项目名称</string>
    <string name="declare_type">申报类别</string>
    <string name="declare_info">项目描述</string>
    <string name="declare_money">申报补贴金额</string>
    <string name="add_attachment_all">点击添加附件(ppt.docx.xlsx.pdf.jpg.png)	</string>
    <string name="have_declare">已审核</string>
    <string name="wait_declare">待审核</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="tv_published">已发布</string>
    <string name="tv_to_be_reviewed">待审核</string>
    <string name="tv_reviewed">已审核</string>
    <string name="tv_reviewed_fail">审核失败</string>
    <string name="tv_offiline">已下线</string>
</resources>
