<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_300"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_27">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/edit_msg"
            android:textColor="#ff303030"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_17"
            android:src="@mipmap/ic_esc" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/title"
        android:textColor="#ff303030"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_title"
        style="@style/AppovalEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_15"
        android:hint="@string/hint_msg_title" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_title"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/text"
        android:textColor="#ff303030"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_text"
        style="@style/AppovalEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_161"
        android:layout_below="@+id/tv_text"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_15"
        android:hint="@string/hint_msg_text" />

    <TextView
        android:id="@+id/tv_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_text"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/attachment"
        android:textColor="#ff303030"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_attachment"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:overScrollMode="never" />

    <RelativeLayout
        android:id="@+id/rl_add_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_attachment"
        android:layout_marginTop="@dimen/dp_10">

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="@dimen/dp_12"
            android:layout_height="@dimen/dp_12"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/ic_increase" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toRightOf="@+id/iv_add"
            android:text="@string/add_attachment"
            android:textColor="#ff999999"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_height="@dimen/dp_48"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/send"
        android:background="@drawable/reg_btn_shape"
        android:textColor="#FFFFFF" />
</RelativeLayout>