<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_title_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/tv_preview_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/preview_step"
                    android:textColor="#ff303030"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_25"
                    android:text="@string/complete"
                    android:textColor="#ff303030"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_35"
                    android:layout_marginTop="@dimen/dp_41"
                    android:text="@string/register"
                    android:textColor="#ff303030"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toRightOf="@+id/tv_register"
                    android:text="@string/step2"
                    android:textColor="#ff000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_head"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:src="@mipmap/default_tx_img" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_35"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_128"
                    android:layout_height="@dimen/dp_22"
                    android:text="@string/register_hint"
                    android:textColor="#ff999999"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_22"
                    android:text="@string/login"
                    android:textColor="#ff3c66e4"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_35"
                android:background="@null"
                android:hint="@string/username_must"
                android:textColorHint="#D0D0D0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_35"
                android:background="#F3F3F3" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_35"
                android:background="@null"
                android:hint="@string/phone_must"
                android:inputType="phone"
                android:textColorHint="#D0D0D0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_35"
                android:background="#F3F3F3" />


            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_35"
                android:background="@null"
                android:hint="@string/mail_must"
                android:inputType="textEmailAddress"
                android:textColorHint="#D0D0D0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_35"
                android:background="#F3F3F3" />

            <EditText
                android:id="@+id/et_id_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_35"
                android:background="@null"
                android:hint="@string/id_must"
                android:inputType="number"
                android:textColorHint="#D0D0D0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_35"
                android:background="#F3F3F3" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_35"
                android:background="@null"
                android:hint="@string/pwd_must"
                android:inputType="textPassword"
                android:textColorHint="#D0D0D0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_35"
                android:background="#F3F3F3" />
        </LinearLayout>
    </RelativeLayout>
</layout>