<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rl_title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="分组0"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_diver"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@+id/rl_title_bar"
            android:background="#F3F3F3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_group_user"
            android:background="@color/gray_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_bottom_bar"
            android:layout_below="@+id/view_diver"
            android:scrollbars="none"/>

        <LinearLayout
            android:id="@+id/ll_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_move"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/move"
                android:textColor="@color/guide_anim"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>